--- a/stocks-tracker/package.json
+++ b/stocks-tracker/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "preview": "vite preview"
   },
